# factorylm

./: .gitignore  MIGRATION.md  README.md  package.json  turbo.json
.claude/skills/factorylm/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
adapters/slack/: README.md  index.js  package.json
adapters/slack/lib/: blocks.js  parser.js
adapters/whatsapp/: README.md  index.js  package.json
apps/cmms/: .gitignore  README.md  docker-compose.yml
apps/dashboard/: README.md
apps/portal/: README.md
core/: README.md  __init__.py  requirements.txt
core/adapters/: __init__.py
core/i18n/: __init__.py
core/models/: __init__.py
core/services/: __init__.py
docs/: README.md
docs/adapters/: WHATSAPP_SETUP.md  clawdbot-whatsapp-open.json
docs/specs/: TEMPLATE.md
services/: ADAPTER_COMPARISON.md
services/api/: README.md
services/assistant/: README.md
services/plc-copilot/: .env.example  Dockerfile  README.md  photo_to_cmms_bot.py  requirements.txt
services/plc-modbus/: .env.example  CLAUDE.md  README.md  pyproject.toml  requirements.txt
services/plc-modbus/backend/: __init__.py  config.py  main.py
services/plc-modbus/backend/models/: __init__.py  plc_models.py  scan_models.py
services/plc-modbus/backend/routes/: __init__.py  plc.py  setup.py  websocket.py
services/plc-modbus/backend/services/: __init__.py  network_scanner.py  plc_connection.py
services/plc-modbus/docs/: API.md  USER_MANUAL_Pi_Edge_Setup.md  WHITEPAPER_LLM_PLC_Integration.md
services/plc-modbus/factorylm-edge/: README.md  config.json  edge_server.py  gpio_mapping.py  install.sh  requirements.txt
services/plc-modbus/src/factorylm_plc/: __init__.py  connection_manager.py  factory.py  factory_io.py  llm4plc.py  mock_plc.py
services/plc-modbus/tools/: __init__.py  plc_logger.py  plc_monitor.py
(+119 files in other folders)
